load store from memory segment